config-root/namespaces/jx-production/golang-pipeline-lab/golang-pipeline-lab-golang-pipeline-lab-deploy.yaml
# Source: golang-pipeline-lab/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: golang-pipeline-lab-golang-pipeline-lab
  labels:
    draft: draft-app
    chart: "golang-pipeline-lab-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'golang-pipeline-lab'
    wave.pusher.com/update-on-config-change: 'true'
  namespace: jx-production
spec:
  selector:
    matchLabels:
      app: golang-pipeline-lab-golang-pipeline-lab
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: golang-pipeline-lab-golang-pipeline-lab
    spec:
      serviceAccountName: golang-pipeline-lab-golang-pipeline-lab
      containers:
        - name: golang-pipeline-lab
          image: "10.107.253.161/kardasa/golang-pipeline-lab:0.0.1"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
        - name: "tekton-container-registry-auth"
